Several fixes and improvements regarding further integration of image-editor with other file system components and workflows.

--- a/editors/image-editor-save-modal.html
+++ b/editors/image-editor-save-modal.html
@@ -1,35 +1,35 @@
 
 <style>
 
-	lazy-image {
-		height: 196px;
-	}
+  lazy-image {
+    height: 196px;
+  }
 
   #dismiss-btn {
     color: var(--app-primary-color);
   }
 
   #save-btn {
-  	background-color: var(--app-primary-color);
-  	color: 						var(--constant-light-text);
+    background-color: var(--app-primary-color);
+    color:            var(--constant-light-text);
   }
 
 </style>
 
 
 <app-modal id="modal"
-           heading="Save Edited Image">
+           heading="Save New Image">
 
   <div id="content" 
      slot="card-content-slot">
 
     <lazy-image alt="Edited image preview." 
-    						src="[[src]]" 
-    						sizing="contain">
+                src="[[src]]" 
+                sizing="contain">
     </lazy-image>
 
     <p hidden="[[!_unsaved]]">
-    	Would you like to save your changes before closing?
+      Would you like to save your changes before closing?
     </p>
 
   </div>
