--- a/editors/metadata-page.html
+++ b/editors/metadata-page.html
@@ -131,7 +131,7 @@
               disabled="[[!_changes]]" 
               raised 
               on-click="__saveBtnClicked">
-  Save
+  UPDATE
 </paper-button>
 
 <div id="info" class="shared-divider">
