--- a/lists/processing-error-icon.html
+++ b/lists/processing-error-icon.html
@@ -12,6 +12,9 @@
 
 	paper-menu-button {
 		--paper-menu-button-dropdown-background: var(--app-background-color);
+		--paper-menu-button-content: {
+			overflow: visible;
+		};
 	}
 
 	iron-icon {
@@ -22,7 +25,8 @@
 
 	#content {
 		padding: 8px 16px;
-		color: 	 var(--dark-text-color);
+		background-color: var(--app-background-color);
+		color: 	 					var(--dark-text-color);
 	}
 
 </style>
