--- a/editors/image-cropper.html
+++ b/editors/image-cropper.html
@@ -126,7 +126,8 @@
 								name="[[_name]]"
 								slot="preview"
 								src="[[_src]]"
-								on-crop-wrapper-active="__cropperActive">
+								on-crop-wrapper-active="__cropperActive"
+								on-crop-wrapper-ready="__cropperReady">
 	</crop-wrapper>
 
 	<!-- Top row of control buttons. -->
