Now showing a loading spinner while an edited image is being saved and the image-editor is being reset. Fixed broken icon import for processing-icon.

--- a/lists/processing-icon.html
+++ b/lists/processing-icon.html
@@ -49,7 +49,7 @@
 </style>
 
 
-<iron-icon icon="app-icons:cloud"></iron-icon>
+<iron-icon icon="file-icons:cloud"></iron-icon>
 
 <iron-icon id="gear" 
 					 icon="app-icons:settings">
