Minor fixes including correcting the filter source that feeds each filter-item so images maintain their aspect ratio and are not distored. Also added the restamp property to image-editors template dom-if so its dom will be removed when not being used. This is a memory performance enhancement to reduce the impact of using dataURL strings for 8 filter-items. Started the process of responsively laying out the file-system for larger screens. This version concludes this work for image-editor and camera-roll.

--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -87,8 +87,9 @@
 
 <app-header-overlay id="overlay"
                     disable-background-effects
-                    prebuilt-animation="from-top"
+                    fixed-header
                     header-size="1"
+                    prebuilt-animation="from-top"
                     reset-scroll
                     title="[[_title]]"
                     top-title
