--- a/editors/image-cropper.html
+++ b/editors/image-cropper.html
@@ -1,6 +1,10 @@
 
 <style>
 
+	#top-row {
+		padding-top: 8px;
+	}
+
 	.section {
 		margin-left:  16px;
 		margin-right: 16px;
@@ -131,7 +135,8 @@
 	</crop-wrapper>
 
 	<!-- Top row of control buttons. -->
-	<div class="section groups">
+	<div id="top-row" 
+			 class="section groups">
 
 		<div class="group">
 			<paper-icon-button class="grouped first"
