--- a/editors/image-adjuster.html
+++ b/editors/image-adjuster.html
@@ -1,13 +1,11 @@
 
 <style include="app-shared-styles">
 
-	#preview {
-		display: block;
-		width: 	 100%;
-	}
-
 	#content {
-		padding: 16px;
+		display: 							 grid;
+    grid-template-columns: repeat(auto-fit, minmax(264px, 1fr));
+    grid-column-gap: 			 16px;
+		padding: 							 16px;
 	}
 
 	.wrapper {
@@ -34,7 +32,7 @@
 	#clear {
 		display: 					inline-flex;
     flex-direction: 	column;
-		margin: 					8px 0px;
+		margin: 					0px 16px;
     font-size: 				10px;
 		border-radius:  	3px;
 		background-color: var(--app-background-color);
@@ -146,12 +144,13 @@
 			</div>
 		</div>
 
-		<paper-button id="clear"
-									on-click="__clearClicked">
-			<iron-icon icon="image-editor-icons:clear"></iron-icon>
-			<div>Clear</div>
-		</paper-button>
-
 	</div>
+
+
+	<paper-button id="clear"
+								on-click="__clearClicked">
+		<iron-icon icon="image-editor-icons:clear"></iron-icon>
+		<div>Clear</div>
+	</paper-button>
 
 </image-editor-item>
