--- a/lists/roll-items.html
+++ b/lists/roll-items.html
@@ -15,8 +15,10 @@
       The browser cannot center an element by half pixel values.
       This becomes especially visible with rotated orientation images.
     */
-    grid-gap: 3px; 
-    padding:  3px 0px;
+    grid-gap:  3px;
+    max-width: 768px;
+    margin:    0px auto;
+    padding:   3px 0px;
   }
 
 </style>
