Set img crossorigin attributes in crop-wrapper and image-filters to align with Storage cors setting. This addresses issues with Service Worker caching non cors responses that are not compatable with canvas image manipulation.

--- a/editors/image-filters.html
+++ b/editors/image-filters.html
@@ -23,6 +23,7 @@
 									 on-image-editor-item-btn-clicked="__applyClicked">
 
 	<img id="preview"
+			 crossorigin="anonymous" 
 			 slot="preview"
 	     src="[[_previewSrc]]"/>
 
