Corrected incoming measurements and image-flip sizing to fix the entry animation to photo-viewer, as it was not correct on iOS Safari when the browser nav was visible.

--- a/viewer/photo-viewer.html
+++ b/viewer/photo-viewer.html
@@ -14,6 +14,12 @@
     background-color: black;
   }
 
+  /* Account for iOS Safari's bottom nav. */
+  #flip {
+    bottom: 0px;
+    height: unset;
+  }
+
   #overlay {
     box-shadow:       none;
     background-color: transparent;
