Saving initial work on pre-upload image compression logic. This is completely untested, unfinished and will not work at this point.

--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -57,8 +57,7 @@
                     header-size="1"
                     prebuilt-animation="from-top"
                     fixed-header
-                    title="File Sources"
-                    on-overlay-reset="__reset">
+                    title="Add Files">
 
   <list-icon-button count="[[_dbCount]]"
                     data="[[data]]"
