Updated all css theming to new system which allows for fine grained control of text contrast for each --app-??-color. Updated deps.

--- a/editors/file-editor.html
+++ b/editors/file-editor.html
@@ -21,7 +21,7 @@
     right:    16px;
     bottom:   16px;
     background-color: var(--app-accent-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-accent-color-text);
     z-index:          1;
     transition:       transform 0.4s var(--fab-animation-ease), opacity 0.2s ease-in 0.15s;
   }
