--- a/editors/image-editor-item.html
+++ b/editors/image-editor-item.html
@@ -38,7 +38,7 @@
 		max-width: 414px;
 		margin: 	 0px;
 		background-color: var(--app-accent-color);
-		color: 						var(--constant-dark-text);
+		color: 						var(--app-accent-color-text);
 	}
 
 	#btn[disabled] {
