--- a/editors/image-editor-reset-modal.html
+++ b/editors/image-editor-reset-modal.html
@@ -7,7 +7,7 @@
 
   #reset-btn {
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
 </style>
