--- a/editors/image-editor-save-modal.html
+++ b/editors/image-editor-save-modal.html
@@ -11,7 +11,7 @@
 
   #save-btn {
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
 </style>
