--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -5,6 +5,7 @@
     padding: 0px;
     --overlay-background-color:         var(--app-body-color);
     --overlay-toolbar-background-color: var(--app-primary-color);
+    --overlay-toolbar-color:            var(--app-primary-color-text);
     --overlay-toolbar-vignette-opacity: 0;
   }
 
@@ -22,8 +23,8 @@
     height:    64px;
     max-width: 414px;
     margin:    0px auto;
-    --paper-tab-ink:                  var(--constant-light-text);
-    --paper-tabs-selection-bar-color: var(--constant-light-text);
+    --paper-tab-ink:                  var(--app-primary-color-text);
+    --paper-tabs-selection-bar-color: var(--app-primary-color-text);
   }
 
   .page {
