--- a/editors/image-filters.html
+++ b/editors/image-filters.html
@@ -11,7 +11,7 @@
 	.iron-selected {
 		outline: 					none;
 		background-color: var(--app-dark-color);
-		color: 						var(--constant-light-text);
+		color: 						var(--app-dark-color-text);
 	}
 
 </style>
