--- a/editors/metadata-page.html
+++ b/editors/metadata-page.html
@@ -46,7 +46,7 @@
     width:    100%;
     margin:   32px auto;
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
   .save-btn.is-img {
