--- a/lists/camera-roll.html
+++ b/lists/camera-roll.html
@@ -8,7 +8,7 @@
   #overlay {
     --overlay-toolbar-backdrop-filter:  blur(10px);
     --overlay-toolbar-background-color: transparent;
-    --overlay-toolbar-color:            var(--constant-light-text);
+    --overlay-toolbar-color:            var(--app-dark-color-text);
     --overlay-toolbar-pointer-events:   none;
     --overlay-background-color:         var(--app-body-color);
   }
