--- a/lists/file-list.html
+++ b/lists/file-list.html
@@ -3,6 +3,7 @@
 
   #overlay {
     --overlay-toolbar-background-color: var(--app-primary-color);
+    --overlay-toolbar-color:            var(--app-primary-color-text);
     --overlay-background-color:         var(--app-body-color);
   }
 
