--- a/lists/multiselect-btns.html
+++ b/lists/multiselect-btns.html
@@ -1,9 +1,9 @@
 
 <style>
 
-	:host {
-		display: flex;
-	}
+  :host {
+    display: flex;
+  }
 
   .btn {
     opacity:    0;
@@ -52,7 +52,7 @@
     font-size:        12px;
     pointer-events:   none;
     background-color: var(--app-dark-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-dark-color-text);
   }
 
 </style>
