--- a/lists/processing-icon.html
+++ b/lists/processing-icon.html
@@ -26,7 +26,7 @@
     left: 		 50%;
     height: 	 12px;
     width: 		 12px;
-    color: 		 var(--constant-light-text);
+    color: 		 var(--app-dark-color-text);
     transform: translate(-50%, -50%);
 	}
 
