--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -32,7 +32,7 @@
 
   .cta-btn {
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
   .file-name-inputs {
