--- a/sources/list-icon-button.html
+++ b/sources/list-icon-button.html
@@ -57,7 +57,7 @@
 	#arrow {
 		height: 	 12px;
 		width: 		 12px;
-    color: 		 var(--constant-light-text);
+    color: 		 var(--app-accent-color-text);
     transform: translateY(100%);
 	}
 
