--- a/lists/upload-controls.html
+++ b/lists/upload-controls.html
@@ -11,7 +11,7 @@
     transition:       transform 0.3s var(--custom-ease, ease-in);
     transform:        translateY(100%);
     background-color: var(--app-dark-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-dark-color-text);
   }
 
   #progress-container {
