--- a/sources/device-file-card.html
+++ b/sources/device-file-card.html
@@ -17,7 +17,7 @@
     width:            100%;
     margin:           0px 0px 32px 0px;
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
   *[hidden] {
