--- a/sources/web-file-card.html
+++ b/sources/web-file-card.html
@@ -20,7 +20,7 @@
     width:  100%;
     margin: 32px 0px 0px 0px;
     background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
+    color:            var(--app-primary-color-text);
   }
 
   #download-btn[disabled] {
