First working version of image compression using the wasm-imagemagick library. Still in testing phase.

--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -164,7 +164,7 @@
       Do you want to rename [[__computeRenameModalPural(_filesToRename)]] now?
     </p>
     <p>
-      You can also rename your files anytime in the file editor.
+      You can also rename saved files anytime in the file editor.
     </p>
 
     <div id="modal-items">
@@ -201,7 +201,7 @@
     </paper-button>   
     <paper-button class="cta-btn"               
                   on-click="__saveNamesButtonClicked">
-      SAVE WITH NEW [[__computeRenameModalSaveBtnPlural(_filesToRename)]]
+      RENAME AND SAVE
     </paper-button> 
   </div>
 </app-modal>
