--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -6,41 +6,19 @@
   }
 
   #toolbar-background-container,
-  #compressQueueTracker {
+  #progress {
     position: absolute;
     top:      0px;
     right:    0px;
     bottom:   0px;
     left:     0px;
     z-index: -1;
-  }
-
-  #compressQueueTracker {
-    padding:    16px;
-    font-size:  16px;
-    transition: transform 0.3s var(--custom-ease);
-    background-color: var(--app-primary-color);
-    color:            var(--app-primary-color-text);
-  }
-
-  .show-tracker {
-    transform: translateY(100%);
-  }
-
-  #tracker-label {
-    margin-bottom: 4px;
-  }
+  }  
 
   #toolbar-background {
     height: 100%;
     background-color: var(--app-dark-color);
     color:            var(--app-dark-color-text);
-  }
-
-  paper-progress {
-    width:     100%;
-    max-width: 414px;
-    --paper-progress-active-color: var(--app-accent-color);
   }
 
   #content {
@@ -63,14 +41,13 @@
     text-align: center;
   }
 
+  #content-div {
+    margin-bottom: 8px;
+  }
+
   #modal-items {
     max-height: calc(100vh - 292px);
     overflow-y: auto;
-  }
-
-  .cta-btn {
-    background-color: var(--app-primary-color);
-    color:            var(--app-primary-color-text);
   }
 
   .file-name-inputs {
@@ -84,8 +61,18 @@
     margin-right: 8px;
   }
 
+  #note {
+    color:     var(--secondary-text-color);
+    font-size: 14px;
+  }
+
   #skip-btn {
     color: var(--app-primary-color);
+  }
+
+  #update-btn {
+    background-color: var(--app-primary-color);
+    color:            var(--app-primary-color-text);
   }
 
 </style>
@@ -101,18 +88,15 @@
   <div id="toolbar-background-container"
        slot="header-background-slot">
 
-    <div id="compressQueueTracker"
-         class$="[[_trackerClass]]">
-      <div id="tracker-label">
-        Optimized [[_compressQueueCount]] of [[_compressQueueTotal]] images.
-      </div>
-      <paper-progress indeterminate="[[_runProgressBar]]"></paper-progress>
-    </div>
+    <file-sources-progress-bar id="progress"
+                               processed="[[_processed]]"
+                               processing="[[_processing]]"
+                               read="[[_read]]"
+                               reading="[[_reading]]">
+    </file-sources-progress-bar>
 
     <div id="toolbar-background"></div>
-
   </div>
-
 
 
   <list-icon-button count="[[_dbCount]]"
@@ -157,15 +141,9 @@
 
 
 <app-modal id="renameFilesModal"
-           heading="[[__computeRenameModalHeading(_filesToRename)]]">
+           heading="Save As">
   <div id="content-div" 
-       slot="card-content-slot">
-    <p>
-      Do you want to rename [[__computeRenameModalPural(_filesToRename)]] now?
-    </p>
-    <p>
-      You can also rename saved files anytime in the file editor.
-    </p>
+       slot="card-content-slot">    
 
     <div id="modal-items">
       <template is="dom-repeat" 
@@ -192,16 +170,20 @@
       </template>
     </div>
 
+    <p id="note">
+      Note that you can rename saved files anytime in the editor.
+    </p>
+
   </div>
   
   <div slot="card-actions-slot">
     <paper-button id="skip-btn"
                   on-click="__dismissRenameFilesModalButtonClicked">
-      SKIP AND SAVE
+      SKIP
     </paper-button>   
-    <paper-button class="cta-btn"               
+    <paper-button id="update-btn"               
                   on-click="__saveNamesButtonClicked">
-      RENAME AND SAVE
+      UPDATE
     </paper-button> 
   </div>
 </app-modal>
