--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -1,5 +1,5 @@
 
-<style include="app-shared-styles">
+<style>
 
   #overlay {
     --overlay-background-color: var(--app-body-color);
@@ -43,36 +43,6 @@
 
   #content-div {
     margin-bottom: 8px;
-  }
-
-  #modal-items {
-    max-height: calc(100vh - 292px);
-    overflow-y: auto;
-  }
-
-  .file-name-inputs {
-    display:     flex;
-    align-items: center;
-  }
-
-  .rename-modal-images {
-    height:       64px;
-    width:        64px;
-    margin-right: 8px;
-  }
-
-  #note {
-    color:     var(--secondary-text-color);
-    font-size: 14px;
-  }
-
-  #skip-btn {
-    color: var(--app-primary-color);
-  }
-
-  #update-btn {
-    background-color: var(--app-primary-color);
-    color:            var(--app-primary-color-text);
   }
 
 </style>
@@ -138,52 +108,3 @@
   </div>
 
 </app-header-overlay>
-
-
-<app-modal id="renameFilesModal"
-           heading="Save As">
-  <div id="content-div" 
-       slot="card-content-slot">    
-
-    <div id="modal-items">
-      <template is="dom-repeat" 
-                items="[[_filesToRename]]"
-                as="file">
-        <div class="file-name-inputs">
-          <file-thumbnail class="rename-modal-images"
-                          item="[[file]]" 
-                          presentation 
-                          sizing="contain">
-          </file-thumbnail>
-          <paper-input class="shared-paper-input"
-                       allowed-pattern="[^/\f/\n/\r/\t/\v]"
-                       autocorrect
-                       autofocus
-                       autocomplete
-                       auto-validate
-                       label="File Name"
-                       on-value-changed="__renameInputChanged"
-                       placeholder="[[__computePlaceholderName(file.name)]]"
-                       tabindex="0">
-          </paper-input>
-        </div>
-      </template>
-    </div>
-
-    <p id="note">
-      Note that you can rename saved files anytime in the editor.
-    </p>
-
-  </div>
-  
-  <div slot="card-actions-slot">
-    <paper-button id="skip-btn"
-                  on-click="__dismissRenameFilesModalButtonClicked">
-      SKIP
-    </paper-button>   
-    <paper-button id="update-btn"               
-                  on-click="__saveNamesButtonClicked">
-      UPDATE
-    </paper-button> 
-  </div>
-</app-modal>
